--- a/index.html
+++ b/index.html
@@ -9,22 +9,69 @@
 </head>
 
 <body>
-    <div class="header">
-        <h1>Weather Dashboard</h1>
+    <h1>Weather Dashboard</h1>
+    <div id="search-container">
+        <input type="text" id="city-input" placeholder="Enter a city">
+        <button id="search-button">Search</button>
     </div>
-    <div class="weater-nav">
-        <h3 class="card-header">Search for a City</h3>
-        <input type="text" placeholder="E.g., Atlanta, Las Vegas">
-        <button class="search-btn">Search</button>
+    <div id="search-history">
+        <!-- Display search history here -->
     </div>
-    <div class="weather-data">
-
+    <div id="current-weather">
+        <!-- Display current weather information here -->
     </div>
-
-
-
-
-
+    <div id="forecast">
+        <!-- Display 5-day forecast here -->
+    </div>
+    <div id="weather-today">
+        <h3>Today's Weather</h3>
+        <div class="card-today">
+            <h5> <span id="searchedCity"></span></h5>
+            <h6><span id="todayDate"></span></h6>
+            <img id="todayIcon" src="" style="margin-left:45%;">
+            <p><strong>Temperature: </strong><span id="todayTemp"></span> °F</p>
+            <p><strong>Humidity: </strong><span id="todayHumidity"></span>%</p>
+            <p><strong>Wind Speed: </strong><span id="todayWind"></span> mph</p>
+            <p><strong>UV Index: </strong><span id="todayUV"></span></p>
+        </div>
+        <!--End Today's Weather Section-->
+        <!--Forecast 5 Day Section-->
+        <div class="container" id="forecast5day">
+            <h3>5-Day Forecast</h3>
+            <!--Day 1-->
+            <div class="card-5day">
+                <h6 id="day1"></h6>
+                <p><strong>Temp:</strong> <span id="t1"></span> °F</p>
+                <p><strong>Humidity:</strong> <span id="h1"></span>%</p>
+            </div>
+        </div>
+        <!--Day 2-->
+        <div class="card-5day">
+            <h6 id="day2"></h6>
+            <p><strong>Temp:</strong> <span id="t2"></span> °F</p>
+            <p><strong>Humidity:</strong> <span id="h2"></span>%</p>
+        </div>
+    </div>
+    <!--Day 3-->
+    <div class="card-5day">
+        <h6 id="day3"></h6>
+        <p><strong>Temp:</strong> <span id="t3"></span> °F</p>
+        <p><strong>Humidity:</strong> <span id="h3"></span>%</p>
+    </div>
+    </div>
+    <!--Day 4-->
+    <div class="card-5day">
+        <h6 id="day4"></h6>
+        <p><strong>Temp: </strong><span id="t4"></span> °F</p>
+        <p><strong>Humidity:</strong> <span id="h4"></span>%</p>
+    </div>
+    </div>
+    <!--Day 5-->
+    <div class="card-5day">
+        <h6 id="day5"></h6>
+        <p><strong>Temp:</strong> <span id="t5"></span> °F</p>
+        <p><strong>Humidity:</strong> <span id="h5"></span>%</p>
+    </div>
 </body>
-
+<script src="./assets/script.js"></script>
 </html>
