--- a/index.html
+++ b/index.html
@@ -23,17 +23,15 @@
     <div id="forecast">
         <!-- Display 5-day forecast here -->
     </div>
-    <div id="weather-today">
+    <div id="weather-today" class="card-today">
         <h3>Today's Weather</h3>
-        <div class="card-today">
-            <h5> <span id="searchedCity"></span></h5>
-            <h6><span id="todayDate"></span></h6>
-            <img id="todayIcon" src="" style="margin-left:45%;">
-            <p><strong>Temperature: </strong><span id="todayTemp"></span> °F</p>
-            <p><strong>Humidity: </strong><span id="todayHumidity"></span>%</p>
-            <p><strong>Wind Speed: </strong><span id="todayWind"></span> mph</p>
-            <p><strong>UV Index: </strong><span id="todayUV"></span></p>
-        </div>
+        <h5> <span id="searchedCity"></span></h5>
+        <h6><span id="todayDate"></span></h6>
+        <img id="todayIcon" src="" style="margin-left:45%;">
+        <p><strong>Temperature: </strong><span id="todayTemp"></span> °F</p>
+        <p><strong>Humidity: </strong><span id="todayHumidity"></span>%</p>
+        <p><strong>Wind Speed: </strong><span id="todayWind"></span> mph</p>
+    </div>
         <!--End Today's Weather Section-->
         <!--Forecast 5 Day Section-->
         <div class="container" id="forecast5day">
